--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,40 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.mt-1 {
+  margin-top: 1em !important;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.mb-3 {
+  margin-bottom: 3em !important;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ml-3 {
+  margin-left: 3em !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.hide {
+  display: none;
 }
 
-.card {
-  padding: 2em;
+.ui.button.floatingButton {
+  padding: 0px;
+  width: 60px;
+  height: 60px;
+  border-radius: 100%;
+  position: absolute;
+  bottom: 30px;
+  right: 30px;
+  background-color: var(--amplify-primary-color);
+  color: var(--amplify-secondary-contrast);
 }
 
-.read-the-docs {
-  color: #888;
+.ui.button.floatingButton:hover {
+  background-color: var(--amplify-primary-color);
+}
+
+.floatingButton_icon {
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
+.ui.dimmer {
+  padding: 0 !important;
 }
